--- a/overlay/frameworks/base/core/res/res/xml/storage_list.xml
+++ b/overlay/frameworks/base/core/res/res/xml/storage_list.xml
@@ -34,9 +34,14 @@
 
 <StorageList xmlns:android="http://schemas.android.com/apk/res/android">
     <storage android:mountPoint="/mnt/sdcard"
-        android:storageDescription="@string/storage_sd_card"
-        android:primary="true"
-        android:allowMassStorage="true"
-        android:removable="true"
-        android:maxFileSize="4096" />
+             android:storageDescription="@string/storage_internal"
+             android:primary="true"
+             android:removable="false"
+             android:allowMassStorage="true" />
+    <storage android:mountPoint="/mnt/sdcard/ext_sd"
+             android:storageDescription="@string/storage_sd_card"
+             android:primary="false"
+             android:allowMassStorage="true"
+             android:removable="true"
+             android:maxFileSize="4096" />
 </StorageList>
