Overlay Updates:     Try to fix our network Attributes in overlay     Fix our Light values     Update power_profiles(Needs cpu states updated based upon final kernel)     Revert back to the old storage_lists to fix regression     Remove Contacts overlay

--- a/overlay/frameworks/base/core/res/res/xml/power_profile.xml
+++ b/overlay/frameworks/base/core/res/res/xml/power_profile.xml
@@ -51,7 +51,11 @@
         <value>844800</value>
         <value>998400</value>
     </array>
+    <!-- Power consumption in suspend -->
     <item name="cpu.idle">2.8</item>
+    <!-- Power consumption due to wake lock held -->
+    <item name="cpu.awake">10</item>
+    <!-- Power consumption at different speeds -->
     <array name="cpu.active">
         <value>66.6</value>
         <value>84</value>
