--- a/overlay/frameworks/base/core/res/res/xml/storage_list.xml
+++ b/overlay/frameworks/base/core/res/res/xml/storage_list.xml
@@ -33,15 +33,10 @@
 -->
 
 <StorageList xmlns:android="http://schemas.android.com/apk/res/android">
+    <!-- removable is not set in nosdcard product -->
     <storage android:mountPoint="/mnt/sdcard"
-             android:storageDescription="@string/storage_internal"
-             android:primary="true"
-             android:removable="false"
-             android:allowMassStorage="true" />
-    <storage android:mountPoint="/mnt/sdcard/ext_sd"
              android:storageDescription="@string/storage_sd_card"
-             android:primary="false"
-             android:allowMassStorage="true"
+             android:primary="true"
              android:removable="true"
-             android:maxFileSize="4096" />
+             android:allowMassStorage="true" />
 </StorageList>
