Fix setup for SD Cards ext_sd is a symlink to /sdcard2 	(Will follow up with updated init for mounting)

--- a/overlay/frameworks/base/core/res/res/xml/storage_list.xml
+++ b/overlay/frameworks/base/core/res/res/xml/storage_list.xml
@@ -38,7 +38,7 @@
              android:primary="true"
              android:removable="false"
              android:allowMassStorage="true" />
-    <storage android:mountPoint="/mnt/sdcard/sd_ext"
+    <storage android:mountPoint="/mnt/sdcard2"
              android:storageDescription="@string/storage_sd_card"
              android:primary="false"
              android:removable="true"
