--- a/overlay/frameworks/base/core/res/res/xml/storage_list.xml
+++ b/overlay/frameworks/base/core/res/res/xml/storage_list.xml
@@ -33,14 +33,17 @@
 -->
 
 <StorageList xmlns:android="http://schemas.android.com/apk/res/android">
-    <storage android:mountPoint="/mnt/sdcard"
+<!--
+    <storage android:mountPoint="/mnt/emmc"
              android:storageDescription="@string/storage_internal"
-             android:primary="true"
+             android:primary="false"
              android:removable="false"
              android:allowMassStorage="true" />
-    <storage android:mountPoint="/mnt/sdcard2"
+-->
+
+    <storage android:mountPoint="/mnt/sdcard"
              android:storageDescription="@string/storage_sd_card"
-             android:primary="false"
-             android:removable="true"
+             android:primary="true"
+             android:removable="false"
              android:allowMassStorage="true" />
 </StorageList>
