Fix incorrect display of roaming indicator

--- a/overlay/frameworks/base/core/res/res/xml/eri.xml
+++ b/overlay/frameworks/base/core/res/res/xml/eri.xml
@@ -32,16 +32,16 @@
                        CallPromptText="CallPromptId2"/>
 
          <EriInfo RoamingIndicator="0"
-                  IconIndex="0"
+                  IconIndex="1"
                   IconMode="0"
-                  EriText=""
+                  EriText="Verizon Wireless"
                   CallPromptId="0"
                   AlertId="0"/>
 
          <EriInfo RoamingIndicator="1"
                   IconIndex="1"
                   IconMode="0"
-                  EriText=""
+                  EriText="Verizon Wireless"
                   CallPromptId="0"
                   AlertId="0"/>
 
@@ -162,6 +162,6 @@
                   IconMode="1"
                   EriText="Network Extender"
                   CallPromptId="0"
-                  AlertId="2"/>
+                  AlertId="0"/>
 
 </EriFile>
